# hcFFT

./: CMakeLists.txt  README.md  build.sh  clean.sh  contributors.txt  hipifyFFT  install.sh  uninstall.sh
cmake/: FindFFTW.cmake  FindHC++.cmake
docs/: Makefile  make.bat
docs/Documentation/html/: .buildinfo  HCFFT_TYPES.html  Helper_functions.html  Modules.html  c2c.html  c2r.html  d2z.html  genindex.html  index.html  objects.inv  r2c.html  search.html  searchindex.js  z2d.html  z2z.html
docs/source/: API_reference.rst  Benchmarking.rst  Getting_Started.rst  HCFFT_TYPES.rst  Installation_steps.rst  Introduction.rst  Modules.rst  Prerequisites.rst  Tested_Environments.rst  Unit_testing.rst  c2c.rst  c2r.rst  conf.py  index.rst  r2c.rst  z2d.rst  z2z.rst
examples/: hcfft_1D_C2C.cpp  hcfft_1D_C2R.cpp  hcfft_1D_R2C.cpp  hcfft_2D_C2C.cpp  hcfft_2D_C2R.cpp  hcfft_2D_R2C.cpp  hcfft_3D_C2C.cpp  hcfft_3D_C2R.cpp  hcfft_3D_R2C.cpp
lib/examples/: CMakeLists.txt  hcfft_1D_C2C.cpp  hcfft_1D_C2R.cpp  hcfft_1D_R2C.cpp  hcfft_2D_C2R.cpp  hcfft_2D_R2C.cpp  hcfft_3D_C2R.cpp  hcfft_3D_R2C.cpp
lib/include/: hcfft.h  hcfftlib.h  hipfft.h  lock.h  stockham.h
lib/include/hcc_detail/: hip_fft.h
lib/include/nvcc_detail/: hip_fft.h
lib/src/: CMakeLists.txt  copy.cpp  generator.copy.cpp  generator.stockham.cpp  generator.transpose.cpp  generator.transpose.gcn.cpp  generator.transpose.h  generator.transpose.nonsquare.cpp  generator.transpose.square.cpp  hcfft.cpp  hipfft.cpp  stockham.cpp  transform.cpp  transpose.cpp
lib/src/hcc_detail/: hipfft.cpp
lib/src/nvcc_detail/: hipfft.cpp
packaging/: CMakeLists.txt
packaging/debian/: postinst  prerm  prerm.in
packaging/rpm/: post  postun
pre-builds/: hcfft-master-51076a2-Linux.deb  hcfft-master-87a37f5-Linux.deb
source/: CMakeLists.txt  ampfftlib.h  copy.cpp  hcfftlib.h  lock.h  stockham.cpp  stockham.h  transform.cpp  transpose.cpp
source/test/: CMakeLists.txt  Makefile  fft_test.cpp  run.sh
test/: CMakeLists.txt
test/FFT_benchmark_Convolution_Networks/: README  extracttime_fft.py  runme_chronotimer.sh
test/FFT_benchmark_Convolution_Networks/Comparison_tests/: CMakeLists.txt  Input.txt  clFFTvshcFFT-2D.cpp  extracttime_clfftvshcfft.py  run_clfftVShcfft.sh
test/HIP_Unit_Tests/: CMakeLists.txt  test.sh
test/HIP_Unit_Tests/1D_C2C/: 1D_C2C.cpp  1D_C2C.cu
test/HIP_Unit_Tests/1D_C2R/: 1D_C2R.cpp  1D_C2R.cu
test/HIP_Unit_Tests/1D_D2Z/: 1D_D2Z.cpp
test/HIP_Unit_Tests/1D_R2C/: 1D_R2C.cpp
test/HIP_Unit_Tests/1D_Z2D/: 1D_Z2D.cpp
test/HIP_Unit_Tests/1D_Z2Z/: 1D_Z2Z.cpp  1D_Z2Z.cu
test/HIP_Unit_Tests/2D_C2C/: 2D_C2C.cpp  2D_C2C.cu
test/HIP_Unit_Tests/2D_C2R/: 2D_C2R.cpp  2D_C2R.cu
test/HIP_Unit_Tests/2D_D2Z/: 2D_D2Z.cpp
test/HIP_Unit_Tests/2D_R2C/: 2D_R2C.cpp  2D_R2C.cu
test/HIP_Unit_Tests/2D_Z2D/: 2D_Z2D.cpp
test/HIP_Unit_Tests/2D_Z2Z/: 2D_Z2Z.cpp  2D_Z2Z.cu
test/HIP_Unit_Tests/3D_C2C/: 3D_C2C.cpp  3D_C2C.cu
test/HIP_Unit_Tests/3D_C2R/: 3D_C2R.cpp  3D_C2R.cu
test/HIP_Unit_Tests/3D_D2Z/: 3D_D2Z.cpp
test/HIP_Unit_Tests/3D_R2C/: 3D_R2C.cpp
test/HIP_Unit_Tests/3D_Z2D/: 3D_Z2D.cpp  3D_Z2D.cu
test/HIP_Unit_Tests/3D_Z2Z/: 3D_Z2Z.cpp  3D_Z2Z.cu
test/HIP_Unit_Tests/hipfft_1D_transform/: 1D_C2C.cu  1D_D2Z.cu  1D_R2C.cpp  1D_R2C.cu  1D_Z2D.cu  CMakeLists.txt
test/HIP_Unit_Tests/hipfft_2D_transform/: 2D_D2Z.cpp  2D_D2Z.cu  2D_Z2D.cu  CMakeLists.txt
test/HIP_Unit_Tests/hipfft_3D_transform/: 3D_C2C.cu  3D_D2Z.cpp  3D_D2Z.cu  3D_R2C.cu  3D_Z2Z.cpp  3D_Z2Z.cu  CMakeLists.txt
test/examples/: CMakeLists.txt  hcfft_1D_C2C.cpp  hcfft_1D_C2R.cpp  hcfft_1D_R2C.cpp  hcfft_2D_C2C.cpp  hcfft_2D_C2R.cpp  hcfft_2D_R2C.cpp  hcfft_3D_C2C.cpp  hcfft_3D_C2R.cpp  hcfft_3D_R2C.cpp
test/src/: CMakeLists.txt  fft_test.cpp  fft_timer_test.cpp
test/unit/: CMakeLists.txt  Input.txt  Input2D.txt  test.sh
test/unit-api/: CMakeLists.txt  Input3D.txt  README  test.sh
test/unit-api/hcfft_Create_Destroy_Plan/: CMakeLists.txt  hcfft_Create_destroy_Plan.cpp
test/unit-api/hcfft_transforms/: CMakeLists.txt  hcfft_1D_transform_C2C.cpp  hcfft_1D_transform_C2R.cpp  hcfft_1D_transform_R2C.cpp  hcfft_1D_transform_double_C2C.cpp  hcfft_1D_transform_double_C2R.cpp  hcfft_1D_transform_double_R2C.cpp  hcfft_2D_transform_C2C.cpp  hcfft_2D_transform_C2R.cpp  hcfft_2D_transform_R2C.cpp  hcfft_2D_transform_double_C2C.cpp  hcfft_2D_transform_double_C2R.cpp  hcfft_2D_transform_double_R2C.cpp  hcfft_3D_transform_C2C.cpp  hcfft_3D_transform_C2R.cpp  hcfft_3D_transform_R2C.cpp  hcfft_3D_transform_double_C2C.cpp  hcfft_3D_transform_double_C2R.cpp  hcfft_3D_transform_double_R2C.cpp  helper_functions.h
test/unit-hip/: CMakeLists.txt  Input1D.txt  Input2D.txt  gtest-all.cpp  gtest_main.cpp  test.sh
test/unit-hip/gtest/: gtest.h
test/unit-hip/hipfft_Create_Destroy_Plan/: CMakeLists.txt  hipfft_Create_destroy_Plan.cpp
test/unit-hip/hipfft_transforms/: CMakeLists.txt  helper_functions.h  hipfft_1D_transform_C2C.cpp  hipfft_1D_transform_C2R.cpp  hipfft_1D_transform_R2C.cpp  hipfft_1D_transform_double_C2C.cpp  hipfft_1D_transform_double_C2R.cpp  hipfft_1D_transform_double_R2C.cpp  hipfft_2D_transform_C2C.cpp  hipfft_2D_transform_C2R.cpp  hipfft_2D_transform_R2C.cpp  hipfft_2D_transform_double_C2C.cpp  hipfft_2D_transform_double_C2R.cpp  hipfft_2D_transform_double_R2C.cpp  hipfft_3D_transform_C2C.cpp  hipfft_3D_transform_C2R.cpp  hipfft_3D_transform_R2C.cpp  hipfft_3D_transform_double_C2C.cpp  hipfft_3D_transform_double_C2R.cpp  hipfft_3D_transform_double_R2C.cpp
test/unit/gtest/: CMakeLists.txt  hcfft_1D_transform.cpp  hcfft_1D_transform_double.cpp  hcfft_1D_transform_padding.cpp  hcfft_2D_transform.cpp  hcfft_3D_transform.cpp  (+3 more)
test/unit/gtest/hcfft_3D_transform/: CMakeLists.txt  hcfft_3D_transform.cpp  hcfft_3D_transform_double.cpp  hcfft_3D_transform_padding.cpp
test/unit/gtest/hcfft_Create_Destroy_Plan/: CMakeLists.txt  hcfft_Create_destroy_Plan.cpp
test/unit/hcfft_2D_transform/: .hcfft_2D_transform.cpp.swp  CMakeLists.txt  hcfft_2D_transform.cpp  hcfft_2D_transform.h
test/unit/hcfft_3D_transform/: CMakeLists.txt  hcfft_3D_transform.cpp
(+51 files in other folders)
